src/test/deca/syntax/valid/test_caracteres.deca
// Description:
//    tests de l'ensemble des caractères spéciaux.
//    test_lex ne doit pas donner d'erreur
//    test_synt donne une erreur 
//
// Resultats:
//    pas d'erreur
//    
// Historique:
//    crée le 11/01/2022

{
<
>
=
+
-
*
/
%
.
,
(
)
{
}
!
;
==
!=
>=
<=
&&
||
}